# codeflash

./: .coveragerc  .env  .gitignore  .mcp.json  .pre-commit-config.yaml  10_CRITICAL_JAVA_ENHANCEMENTS.md  AGENTS.md  BUG_HUNT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Claude.md  FRONTEND_OPTIMIZATION_ARCHITECTURE.md  JAVA_ENHANCEMENT_TASKS.md  MULTI_LANGUAGE_ARCHITECTURE.md  Makefile  PYTHON_VS_JAVA_PIPELINE_ANALYSIS.md  README.md  SECURITY.md  TASK_1_IMPLEMENTATION_SUMMARY.md  TODO.md  WARP.md  codeflash.code-workspace  codeflash.spec  events.json  example_usage.py  find_sorter_references.py  function_call_finder.py  function_call_finder_ast.py  function_call_visitor.py  helper.py  main.py  myclient.py  mypy_allowlist.txt  myserver.py  out.json  out.lprof  package-lock.json  package.json  profiler_testbench.py  pyproject.toml  (+9 more)
.claude/: settings.json
.claude/hooks/: bash-guard.sh  post-compact.sh  post-edit-lint.sh  require-read.sh  status-line.sh  track-read.sh
.claude/rules/: architecture.md  code-style.md  debugging.md  git.md  github.md  language-patterns.md  (+5 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.planning/: STATE.md  config.json
.tessl/: missing-tiles.txt
app/: sort.py
benchmarks/: bench_cli_startup.py
code_to_optimize/: User_post.py  async_adder.py  async_bubble_sort.py  bad_formatting.py  belongs_to_class.py  book_catalog.py  book_catalog2.py  book_catalog3.py  bubble_sort.py  bubble_sort2.py  bubble_sort_3.py  bubble_sort_classmethod.py  bubble_sort_codeflash_trace.py  bubble_sort_cuda.py  bubble_sort_dep1_helper.py  bubble_sort_dep2_swap.py  bubble_sort_deps.py  bubble_sort_from_another_file.py  bubble_sort_in_class.py  bubble_sort_in_nested_class.py  bubble_sort_method.py  bubble_sort_method_preserve_bad_formatting_for_nonoptimized_code.py  bubble_sort_multithread.py  bubble_sort_nested_classmethod.py  bubble_sort_picklepatch.py  bubble_sort_picklepatch_test_unused_socket.py  bubble_sort_picklepatch_test_used_socket.py  bubble_sort_preserve_bad_formatting_for_nonoptimized_code.py  bubble_sort_typed.py  complex_activation.py  create_test_set_files.py  crosshair_tests.py  discrete_riccati.py  few_formatting_errors.py  find_common_tags.py  generate_primes.py  helper_method.py  impure.py  many_formatting_errors.py  math_utils.py  (+42 more)
code_to_optimize_js/: bubble_sort.js  codeflash-comparator.js  codeflash-compare-results.js  codeflash-jest-helper.js  codeflash.yaml  fibonacci.js  package-lock.json  package.json  string_utils.js  test_better_sqlite.js  test_sqlite_helper.js
code_to_optimize_js_cjs/: fibonacci.js  package-lock.json  package.json
code_to_optimize_js_esm/: fibonacci.js  jest.config.cjs  package-lock.json  package.json
code_to_optimize_ts/: bubble_sort.ts  codeflash-serializer.js  fibonacci.ts  package.json  string_utils.ts
codeflash/: .env  .env.example  LICENSE  after_aiagents.py  after_algo.py  after_data.py  after_db.py  after_ml.py  after_numerical.py  after_web_server.py  before_aiagents.py  before_algo.py  before_data.py  before_db.py  before_ml.py  before_numerical.py  before_web_server.py  bubble_sort.py  demo_snippets.py  dummy.py  dummy2.py  either.py  install_hooks.py  main.py  model.py  model_run.py  mypy_allowlist.txt  plugin.py  plugin_ai_ops.py  plugin_helpers.py  plugin_results.py  plugin_test_lifecycle.py  profiler_testbench.py  test.py  tracer.py  update_license_version.py  version.py
codeflash-benchmark/: LICENSE  README.md  pyproject.toml
codeflash-benchmark/codeflash_benchmark/: __init__.py  plugin.py  version.py
codeflash-java-runtime/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
docs/: FRICTIONLESS_SETUP_PLAN.md  JS_PROMPT_PARITY_RECOMMENDATIONS.md  README.md  architecture.md  claude-code-integration.mdx  cli-reference.mdx  configuration.md  configuration.mdx  crisp.js  docs.json  docusaurus.config.ts  getting-started.md  getting-the-best-out-of-codeflash.mdx  hook-lifecycle.md  index.mdx  install.md  java-support-architecture.md  package.json  posthog.js  troubleshooting.md  usage-guide.md
experiments/: analysis_experiments.ipynb  bench_analytics.ipynb  concolic_execution.py  metrics_analysis.py  process_optimization_features.py  pytest-repeat.ipynb  react-playwright.py  statistical_analysis.py  wandb.ipynb
mcp_server/: db.py  models.py  runner.py  server.py  test_mcp_workflow.py
npm-package/: README.md  package.json
pie_test_set/: p00007.py  p00029.py  p00312.py  p00322.py  p00340.py  p00341.py  p00354.py  p00494.py  p00514.py  p00991.py  p01486.py  p01809.py  p02256.py  p02263.py  p02388.py  p02389.py  p02393.py  p02406.py  p02415.py  p02470.py  p02541.py  p02548.py  p02550.py  p02552.py  p02553.py  p02555.py  p02576.py  p02584.py  p02594.py  p02596.py  p02600.py  p02606.py  p02612.py  p02624.py  p02625.py  p02633.py  p02634.py  p02639.py  p02657.py  p02660.py  (+180 more)
scripts/: setup_mcp.py
temp/: end-to-end-test-futurehouse.yaml  end-to-end-test-init-optim.yaml  label-workflow-changes.yml
tests/: conftest.py  dummy_test.py  mymodule.py  test_add_language_metadata.py  test_add_needed_imports_from_module.py  test_add_runtime_comments.py  test_async_concurrency_decorator.py  test_async_function_discovery.py  test_async_instrumentation.py  test_async_run_and_parse_tests.py  test_async_wrapper_sqlite_validation.py  test_bayesian_analysis.py  test_build_context_tree.py  test_call_graph.py  test_candidate_evaluation_context.py  test_cfapi.py  test_cleanup_instrumented_files.py  test_cli_args.py  test_cmd_auth.py  test_cmd_init.py  test_code_context_extractor.py  test_code_deduplication.py  test_code_extractor_none_aliases_exact.py  test_code_replacement.py  test_code_replacement_pr.py  test_code_replacer_matching.py  test_code_utils.py  test_codeflash_capture.py  test_codeflash_checkpoint.py  test_codeflash_trace_decorator.py  test_common_tags.py  test_comparator.py  test_compare.py  test_concurrent_optimize_loop.py  test_context_cst.py  test_cr_pr.py  test_create_ro_context.py  test_create_rw_context.py  test_critic.py  test_diff_classifier.py  (+100 more)
(+5202 files in other folders)
