[project]
name = "codeflash-benchmark"
dynamic = ["version"]
description = "Pytest benchmarking plugin for codeflash.ai - automatic code performance optimization"
authors = [{ name = "CodeFlash Inc.", email = "contact@codeflash.ai" }]
requires-python = ">=3.9"
readme = "README.md"
license-files = ["LICENSE"]
keywords = [
    "codeflash",
    "benchmark",
    "pytest",
    "performance",
    "testing",
]
dependencies = [
    "pytest>=7.0.0,!=8.3.4",
]

[project.urls]
Homepage = "https://codeflash.ai"
Repository = "https://github.com/codeflash-ai/codeflash-benchmark"

[project.entry-points.pytest11]
codeflash-benchmark = "codeflash_benchmark.plugin"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
style = "pep440"
vcs = "git"

[tool.hatch.build.hooks.version]
path = "codeflash_benchmark/version.py"
template = """# These version placeholders will be replaced by uv-dynamic-versioning during build.
__version__ = "{version}"
"""
